<resources>
    <string name="app_name">Calculator app</string>
    <string name="my_info">My Info</string>
    <string name="welcome_to_my_app">Welcome to my App</string>
    <string name="calculator">Calculator</string>
    <string name="name">Name :</string>
    <string name="deep_gulhane">Deep Gulhane</string>
    <string name="college">College :</string>
    <string name="prmceam_amravati">PRMCEAM , Amravati</string>
    <string name="roll_no">Roll no. :</string>
    <string name="_21">21</string>
    <string name="branch">Branch :</string>
    <string name="cse">CSE</string>
    <string name="year">Year :</string>
    <string name="_2nd_year">2nd Year</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multi">Multi</string>
    <string name="sub">Sub</string>
    <string name="add1">Add</string>
    <string name="mod">Mod</string>
    <string name="div">Div</string>
    <string name="_2127rn04">2127RN04</string>
    <string name="intern">Intern</string>
    <string name="internd">Intern :</string>
    <string name="golden_bird_education">Golden Bird Education</string>
    <string name="calculator_app">Calculator App</string>
</resources>