<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPart"
    android:orientation="vertical"
    android:background="@drawable/color_bg">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_img"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/deep_gulhane"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/college"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:text="@string/prmceam_amravati"
            android:textSize="24sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/roll_no"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:text="@string/_2127rn04"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/internd"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/golden_bird_education"
            android:textSize="24sp"
            />
    </LinearLayout>




</LinearLayout>