<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:background="#F4F4F4"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:background="#F4F4F4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/ansButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4F4F4"
            android:inputType="number|numberDecimal"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="32sp">

        </TextView>


    </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:text="@string/add1"
            app:cornerRadius="20dp"
            android:backgroundTint="#7E47DF">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub"
            app:cornerRadius="20dp"
            android:layout_marginStart="150dp"
            android:backgroundTint="#FF5722">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mulButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            app:cornerRadius="20dp"
            android:backgroundTint="#8BC34A"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            app:cornerRadius="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="150dp"
            android:backgroundTint="#009688">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        android:layout_gravity="center"
        app:cornerRadius="20dp"
        android:backgroundTint="#5A3B3B">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>
